@@ -1,3 +1,13 @@
+Tue Jul 13 19:39:12 2004  akira yamada  <akira@ruby-lang.org>
+
+	* lib/uri/generic.rb (URI::Generic#merge_path):
+	  "URI('http://www.example.com/foo/..') + './'" should return
+	  "URI('http://www.example.com/')".  [ruby-list:39838]
+	  "URI('http://www.example.com/') + './foo/bar/..'" should return
+	  "URI('http://www.example.com/foo/')".  [ruby-list:39844]
+
+	* test/uri/test_generic.rb (TestGeneric#test_merge): added tests.
+
 Tue Jul 13 15:48:56 2004  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/mkmf.rb (init_mkmf): Do not add $(libdir) to $LIBPATH in
